# P4API

./: CMakeLists.txt
Windows/VS2012/lib_x86/Debug/: libclient.lib  libp4sslstub.lib  librpc.lib
Windows/VS2012/lib_x86/Release/: libclient.lib  libeay32.lib  libp4sslstub.lib  librpc.lib
Windows/VS2013/lib_x86/: libclient.lib  libp4sslstub.lib  librpc.lib  ssleay32.lib
Windows/VS2015/lib_x86/Debug/: libclient.lib  libp4sslstub.lib  librpc.lib
Windows/VS2015/lib_x86/Release/: libclient.lib  libp4sslstub.lib  librpc.lib
include/p4/: msgserver.h  p4api.h
sample/: Jamrules  Version  p4api.cc  p4dvcsapi.cc
src/: p4api.cpp
